<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:orientation="vertical"
    tools:context=".ToDoItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/taskEdit"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="dateTime"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tvCal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/priority"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rgPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/high"
                android:textColor="@android:color/holo_red_dark" />


            <RadioButton
                android:id="@+id/rbMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@android:color/holo_orange_dark" />

            <RadioButton
                android:id="@+id/rbLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:textColor="@android:color/holo_blue_dark" />
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/status"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rgStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/active" />


            <RadioButton
                android:id="@+id/rbCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed" />
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/save" />


    </LinearLayout>

</LinearLayout>